# WayNetConverter

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  Converter.cpp  Converter.h  Waypoint.h  main.cpp  mainwindow.ui
